# ProjectAssignment

./: .gitignore  Makefile  NOTES.md  README.md  README_old.md  TODO.md  gurobi.env  logging.yaml  pyproject.toml  pyproject_local.toml
adsigno/: __main__.py  check_sol.py  cml_parser.py  load_data.py  lottery.py  models_ip.py  models_ip_envyfree.py  models_ip_instability.py  models_ip_scip.py  models_ip_weighted.py  owa.py  process.py  ravel_topics_1.py  ravel_topics_2.py  solution_report.py  solution_report_admin.py  utils.py
data/2019/: README.txt  projects.csv  projects.csv.iso  students.csv  students.csv.iso  tmp_priorities.txt  tmp_projects.txt  tmp_students.txt  types.csv
data/2021-example/: projects.csv  restrictions.json  students.csv
data/2022-ff501/: log.txt  projects.csv  students.csv  types.csv  types.csv~
data/test_1/: owa.txt  restrictions.json  types.csv
data/test_3/: log.txt  projects.csv  restrictions.json  students.csv  types.csv
data/test_4/: log.txt  restrictions.json  students.csv  types.csv
data/test_5/: log.txt  projects.csv  restrictions.json  students.csv  types.csv
log/: projects.json  ranks.json  students.json
scripts/: make_gtables.R
sln/: log_001.txt  sol_001.txt
src/: check_sol.py  cml_parser.py  load_data.py  main.py  models_hooker.py  models_ip.py  models_ip_envyfree.py  models_ip_instability.py  models_ip_scip.py  models_ip_weighted.py  owa.py  report_sol.py  report_sol_new.py  study.py  update_projects.py  utils.py
src/adsigno/: __init__.py  __main__.py  check_sol.py  cml_parser.py  load_data.py  (+11 more)
tests/: run.py
