[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "adsigno"
version = "0.0.1"
authors = [
  { name="Marco Chiarandini", email="marco@imada.sdu.dk" },
]
description = "A program to assign students to projects according to their preferences"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/belzebuu/ProjectAssignment"
"Bug Tracker" = "https://github.com/belzebuu/ProjectAssignment/issues"

