[tool.poetry]
name = "adsigno"
version = "0.1.0"
description = ""
authors = ["Marco Chiarandini <marco@imada.sdu.dk>"]
packages = [{include = "adsigno"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
numpy = "^2.1.3"
pyscipopt = "^5.2.1"
gurobipy = "11.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
